forth/test/fail/test_store_arg_min.af
\ Must fail to compile.
fun: .test_store_arg_min_fail { val -- err }
  val !
end
